sdks/swift/Sources/CGoudEngine/include/goud_engine.h

/**
 * FFI-safe playback mode enum.
 */
typedef enum FfiPlaybackMode {
    /**
     * Restart from frame 0 after the last frame.
     */
    Loop = 0,
    /**
     * Stop at the last frame and mark the animation as finished.
     */
    OneShot = 1,
} FfiPlaybackMode;
/**
 * Opaque identifier for an engine context.
 */
typedef struct GoudContextId {
    uint64_t _0;
} GoudContextId;
/**
 * FFI-compatible contact information from a collision.
 */
typedef struct GoudContact {
    /**
     * Contact point X coordinate
     */
    float point_x;
    /**
     * Contact point Y coordinate
     */
    float point_y;
    /**
     * Collision normal X component (unit vector pointing from A to B)
     */
    float normal_x;
    /**
     * Collision normal Y component
     */
    float normal_y;
    /**
     * Penetration depth (positive = overlapping)
     */
    float penetration;
} GoudContact;
/**
 * FFI-safe Sprite representation.
 */
typedef struct FfiSprite {
    /**
     * Texture handle (index and generation packed as u64).
     */
    uint64_t texture_handle;
    /**
     * Color tint red component (0.0 - 1.0).
     */
    float color_r;
    /**
     * Color tint green component (0.0 - 1.0).
     */
    float color_g;
    /**
     * Color tint blue component (0.0 - 1.0).
     */
    float color_b;
    /**
     * Color tint alpha component (0.0 - 1.0).
     */
    float color_a;
    /**
     * Source rectangle X position (if has_source_rect is true).
     */
    float source_rect_x;
    /**
     * Source rectangle Y position.
     */
    float source_rect_y;
    /**
     * Source rectangle width.
     */
    float source_rect_width;
    /**
     * Source rectangle height.
     */
    float source_rect_height;
    /**
     * Whether source_rect is set.
     */
    bool has_source_rect;
    /**
     * Flip horizontally flag.
     */
    bool flip_x;
    /**
     * Flip vertically flag.
     */
    bool flip_y;
    /**
     * Explicit render-order layer.
     */
    int32_t z_layer;
    /**
     * Anchor point X (normalized 0-1).
     */
    float anchor_x;
    /**
     * Anchor point Y (normalized 0-1).
     */
    float anchor_y;
    /**
     * Custom size width (if has_custom_size is true).
     */
    float custom_size_x;
    /**
     * Custom size height.
     */
    float custom_size_y;
    /**
     * Whether custom_size is set.
     */
    bool has_custom_size;
} FfiSprite;
/**
 * FFI-safe Color representation.
 */
typedef struct FfiColor {
    /**
     * Red component (0.0 - 1.0).
     */
    float r;
    /**
     * Green component (0.0 - 1.0).
     */
    float g;
    /**
     * Blue component (0.0 - 1.0).
     */
    float b;
    /**
     * Alpha component (0.0 - 1.0).
     */
    float a;
} FfiColor;
/**
 * FFI-safe Rect representation.
 */
typedef struct FfiRect {
    /**
     * X position of the rectangle.
     */
    float x;
    /**
     * Y position of the rectangle.
     */
    float y;
    /**
     * Width of the rectangle.
     */
    float width;
    /**
     * Height of the rectangle.
     */
    float height;
} FfiRect;
/**
 * FFI-safe 2D vector representation.
 */
typedef struct FfiVec2 {
    /**
     * X component.
     */
    float x;
    /**
     * Y component.
     */
    float y;
} FfiVec2;
/**
 * FFI-safe, flat representation of a `SpriteAnimator` snapshot.
 */
typedef struct FfiSpriteAnimator {
    /**
     * Index of the current frame in the animation clip.
     */
    uint32_t current_frame;
    /**
     * Accumulated time since the last frame advance (seconds).
     */
    float elapsed;
    /**
     * Whether the animation is currently playing.
     */
    bool playing;
    /**
     * Whether a OneShot animation has completed.
     */
    bool finished;
    /**
     * Seconds per frame.
     */
    float frame_duration;
    /**
     * Playback mode.
     */
    enum FfiPlaybackMode mode;
    /**
     * Total number of frames in the clip.
     */
    uint32_t frame_count;
} FfiSpriteAnimator;
/**
 * FFI-safe Transform2D representation.
 */
typedef struct FfiTransform2D {
    /**
     * Position X in world space.
     */
    float position_x;
    /**
     * Position Y in world space.
     */
    float position_y;
    /**
     * Rotation angle in radians.
     */
    float rotation;
    /**
     * Scale along X axis.
     */
    float scale_x;
    /**
     * Scale along Y axis.
     */
    float scale_y;
} FfiTransform2D;
/**
 * FFI-safe Mat3x3 representation (9 floats in column-major order).
 */
typedef struct FfiMat3x3 {
    /**
     * Matrix elements in column-major order.
     */
    float m[9];
} FfiMat3x3;
/**
 * Frame timing statistics computed from the rolling window.
 */
typedef struct FpsStats {
    /**
     * Current (most recent) FPS.
     */
    float current_fps;
    /**
     * Minimum FPS observed in the rolling window.
     */
    float min_fps;
    /**
     * Maximum FPS observed in the rolling window.
     */
    float max_fps;
    /**
     * Average FPS across the rolling window.
     */
    float avg_fps;
    /**
     * Most recent frame time in milliseconds.
     */
    float frame_time_ms;
} FpsStats;
/**
 * FFI-compatible error code type.
 */
typedef int32_t GoudErrorCode;
/**
 * Opaque texture handle for FFI.
 */
typedef uint64_t GoudTextureHandle;
/**
 * FFI-safe rendering statistics.
 */
typedef struct GoudRenderStats {
    /**
     * Number of draw calls this frame
     */
    uint32_t draw_calls;
    /**
     * Number of triangles rendered
     */
    uint32_t triangles;
    /**
     * Number of texture binds
     */
    uint32_t texture_binds;
    /**
     * Number of shader binds
     */
    uint32_t shader_binds;
} GoudRenderStats;
/**
 * FFI-safe result type for returning success/failure status across the FFI boundary.
 */
typedef struct GoudResult {
    /**
     * The error code. `SUCCESS` (0) on success, error code on failure.
     */
    GoudErrorCode code;
    /**
     * True if the operation succeeded, false otherwise.
     */
    bool success;
} GoudResult;
/**
 * Creates a new engine context.
 */
struct GoudContextId goud_context_create(void);
/**
 * Destroys an engine context, freeing all associated resources.
 */
bool goud_context_destroy(struct GoudContextId context_id);
/**
 * Checks if a context ID is valid.
 */
bool goud_context_is_valid(struct GoudContextId context_id);
/**
 * Loads a texture from an image file.
 */
GoudTextureHandle goud_texture_load(struct GoudContextId context_id, const char *path);
/**
 * Destroys a texture and releases its GPU resources.
 */
bool goud_texture_destroy(struct GoudContextId context_id, GoudTextureHandle texture);
/**
 * Draws a textured sprite at the given position.
 */
bool goud_renderer_draw_sprite(struct GoudContextId context_id, GoudTextureHandle texture, float x, float y, float width, float height, float rotation, float r, float g, float b, float a);
/**
 * Draws a textured sprite with a source rectangle for sprite sheet animation.
 */
bool goud_renderer_draw_sprite_rect(struct GoudContextId context_id, GoudTextureHandle texture, float x, float y, float width, float height, float rotation, float src_x, float src_y, float src_w, float src_h, uint32_t src_mode, float r, float g, float b, float a);
/**
 * Draws a colored quad (no texture) at the given position.
 */
bool goud_renderer_draw_quad(struct GoudContextId context_id, float x, float y, float width, float height, float r, float g, float b, float a);
/**
 * Gets rendering statistics for the current frame.
 */
bool goud_renderer_get_stats(struct GoudContextId context_id, struct GoudRenderStats *out_stats);
/**
 * Begins a new rendering frame.
 */
bool goud_renderer_begin(struct GoudContextId context_id);
/**
 * Ends the current rendering frame.
 */
bool goud_renderer_end(struct GoudContextId context_id);
/**
 * Sets the viewport for rendering.
 */
void goud_renderer_set_viewport(struct GoudContextId context_id, int32_t x, int32_t y, uint32_t width, uint32_t height);
/**
 * Enables alpha blending for transparent sprites.
 */
void goud_renderer_enable_blending(struct GoudContextId context_id);
/**
 * Disables alpha blending.
 */
void goud_renderer_disable_blending(struct GoudContextId context_id);
/**
 * Enables depth testing.
 */
void goud_renderer_enable_depth_test(struct GoudContextId context_id);
/**
 * Disables depth testing.
 */
void goud_renderer_disable_depth_test(struct GoudContextId context_id);
/**
 * Clears the depth buffer.
 */
void goud_renderer_clear_depth(struct GoudContextId context_id);
/**
 * Adds a light to the scene.
 */
uint32_t goud_renderer3d_add_light(struct GoudContextId context_id, int32_t light_type, float pos_x, float pos_y, float pos_z, float dir_x, float dir_y, float dir_z, float r, float g, float b, float intensity, float range, float spot_angle);
/**
 * Creates a 3D cube object.
 */
uint32_t goud_renderer3d_create_cube(struct GoudContextId context_id, uint32_t texture_id, float width, float height, float depth);
/**
 * Creates a 3D plane object.
 */
uint32_t goud_renderer3d_create_plane(struct GoudContextId context_id, uint32_t texture_id, float width, float depth);
/**
 * Creates a 3D sphere object.
 */
uint32_t goud_renderer3d_create_sphere(struct GoudContextId context_id, uint32_t texture_id, float diameter, uint32_t segments);
/**
 * Creates a 3D cylinder object.
 */
uint32_t goud_renderer3d_create_cylinder(struct GoudContextId context_id, uint32_t texture_id, float radius, float height, uint32_t segments);
/**
 * Sets the position of a 3D object.
 */
bool goud_renderer3d_set_object_position(struct GoudContextId context_id, uint32_t object_id, float x, float y, float z);
/**
 * Sets the rotation of a 3D object (in degrees).
 */
bool goud_renderer3d_set_object_rotation(struct GoudContextId context_id, uint32_t object_id, float x, float y, float z);
/**
 * Sets the scale of a 3D object.
 */
bool goud_renderer3d_set_object_scale(struct GoudContextId context_id, uint32_t object_id, float x, float y, float z);
/**
 * Destroys a 3D object.
 */
bool goud_renderer3d_destroy_object(struct GoudContextId context_id, uint32_t object_id);
/* === Window === */

/**
 * Creates a new windowed context with the default native runtime.
 */
struct GoudContextId goud_window_create(uint32_t width, uint32_t height, const char *title);
/**
 * Destroys a windowed context and releases all resources.
 */
bool goud_window_destroy(struct GoudContextId context_id);
/**
 * Checks if the window should close.
 */
bool goud_window_should_close(struct GoudContextId context_id);
/**
 * Polls window events and updates input state.
 */
float goud_window_poll_events(struct GoudContextId context_id);
/**
 * Swaps the front and back buffers, presenting the rendered frame.
 */
void goud_window_swap_buffers(struct GoudContextId context_id);
/**
 * Gets the window size.
 */
bool goud_window_get_size(struct GoudContextId context_id, uint32_t *out_width, uint32_t *out_height);
/**
 * Sets whether the window should close.
 */
void goud_window_set_should_close(struct GoudContextId context_id, bool should_close);
/**
 * Gets the delta time from the last frame.
 */
float goud_window_get_delta_time(struct GoudContextId context_id);
/**
 * Clears the window with the specified color.
 */
void goud_window_clear(struct GoudContextId context_id, float r, float g, float b, float a);
/**
 * Retrieves the current FPS statistics from the debug overlay.
 */
int32_t goud_debug_get_fps_stats(struct GoudContextId context_id, struct FpsStats *out_stats);
/**
 * Enables or disables the FPS overlay.
 */
int32_t goud_debug_set_fps_overlay_enabled(struct GoudContextId context_id, bool enabled);
/**
 * Sets the FPS stats update interval in seconds.
 */
int32_t goud_debug_set_fps_update_interval(struct GoudContextId context_id, float interval);
/**
 * Sets the screen corner where the FPS overlay is displayed.
 */
int32_t goud_debug_set_fps_overlay_corner(struct GoudContextId context_id, int32_t corner);