sdks/csharp/generated/NativeMethods.g.cs

// This file is AUTO-GENERATED by GoudEngine codegen. DO NOT EDIT.
using System;
using System.Runtime.InteropServices;

namespace GoudEngine
{
    [StructLayout(LayoutKind.Sequential)]
    public struct GoudContextId
    {
        public ulong _bits;
        public static readonly GoudContextId Invalid = new GoudContextId { _bits = ulong.MaxValue };
        public bool IsValid => _bits != ulong.MaxValue;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct GoudResult
    {
        public int Code;
        [MarshalAs(UnmanagedType.U1)] public bool Success;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct FfiColor
    {
        public float R;
        public float G;
        public float B;
        public float A;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct FfiVec2
    {
        public float X;
        public float Y;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct FfiRect
    {
        public float X;
        public float Y;
        public float Width;
        public float Height;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct FfiTransform2D
    {
        public float PositionX;
        public float PositionY;
        public float Rotation;
        public float ScaleX;
        public float ScaleY;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct FfiSprite
    {
        public ulong TextureHandle;
        public float ColorR;
        public float ColorG;
        public float ColorB;
        public float ColorA;
        public float SourceRectX;
        public float SourceRectY;
        public float SourceRectWidth;
        public float SourceRectHeight;
        [MarshalAs(UnmanagedType.U1)]
        public bool HasSourceRect;
        [MarshalAs(UnmanagedType.U1)]
        public bool FlipX;
        [MarshalAs(UnmanagedType.U1)]
        public bool FlipY;
        public float AnchorX;
        public float AnchorY;
        public float CustomSizeX;
        public float CustomSizeY;
        [MarshalAs(UnmanagedType.U1)]
        public bool HasCustomSize;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct GoudRenderStats
    {
        public uint DrawCalls;
        public uint Triangles;
        public uint TextureBinds;
        public uint ShaderBinds;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct GoudFpsStats
    {
        public float CurrentFps;
        public float MinFps;
        public float MaxFps;
        public float AvgFps;
        public float FrameTimeMs;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct GoudContact
    {
        public float PointX;
        public float PointY;
        public float NormalX;
        public float NormalY;
        public float Penetration;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct FfiVec3
    {
        public float X;
        public float Y;
        public float Z;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct FfiSpriteAnimator
    {
        public uint CurrentFrame;
        public float Elapsed;
        [MarshalAs(UnmanagedType.U1)]
        public bool Playing;
        [MarshalAs(UnmanagedType.U1)]
        public bool Finished;
        public float FrameDuration;
        public PlaybackMode Mode;
        public uint FrameCount;
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe struct FfiMat3x3
    {
        public fixed float M[9];
    }

    public static class NativeMethods
    {
        private const string DllName = "libgoud_engine";

        // context
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern GoudContextId goud_context_create();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_context_destroy(GoudContextId ctx);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_context_is_valid(GoudContextId ctx);

        // window
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern GoudContextId goud_window_create(uint width, uint height, [MarshalAs(UnmanagedType.LPStr)] string title);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_window_destroy(GoudContextId ctx);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_window_should_close(GoudContextId ctx);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_window_set_should_close(GoudContextId ctx, [MarshalAs(UnmanagedType.U1)] bool should_close);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern float goud_window_poll_events(GoudContextId ctx);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_window_swap_buffers(GoudContextId ctx);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_window_clear(GoudContextId ctx, float r, float g, float b, float a);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern float goud_window_get_delta_time(GoudContextId ctx);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_window_get_size(GoudContextId ctx, ref uint out_w, ref uint out_h);

        // renderer
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer_begin(GoudContextId ctx);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer_end(GoudContextId ctx);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_renderer_enable_blending(GoudContextId ctx);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer_draw_sprite(GoudContextId ctx, ulong texture, float x, float y, float width, float height, float rotation, float r, float g, float b, float a);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer_draw_quad(GoudContextId ctx, float x, float y, float width, float height, float r, float g, float b, float a);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong goud_texture_load(GoudContextId ctx, [MarshalAs(UnmanagedType.LPStr)] string path);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_texture_destroy(GoudContextId ctx, ulong texture);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer_draw_sprite_rect(GoudContextId ctx, ulong texture, float x, float y, float width, float height, float rotation, float src_x, float src_y, float src_w, float src_h, float r, float g, float b, float a);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_renderer_set_viewport(GoudContextId ctx, int x, int y, uint width, uint height);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_renderer_enable_depth_test(GoudContextId ctx);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_renderer_disable_depth_test(GoudContextId ctx);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_renderer_clear_depth(GoudContextId ctx);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_renderer_disable_blending(GoudContextId ctx);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer_get_stats(GoudContextId ctx, ref GoudRenderStats out_stats);

        // debug
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int goud_debug_get_fps_stats(GoudContextId ctx, ref GoudFpsStats out_stats);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int goud_debug_set_fps_overlay_enabled(GoudContextId ctx, [MarshalAs(UnmanagedType.U1)] bool enabled);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int goud_debug_set_fps_update_interval(GoudContextId ctx, float interval);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int goud_debug_set_fps_overlay_corner(GoudContextId ctx, int corner);

        // renderer_3d
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint goud_renderer3d_create_cube(GoudContextId ctx, uint texture_id, float width, float height, float depth);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint goud_renderer3d_create_plane(GoudContextId ctx, uint texture_id, float width, float depth);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint goud_renderer3d_create_sphere(GoudContextId ctx, uint texture_id, float diameter, uint segments);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint goud_renderer3d_create_cylinder(GoudContextId ctx, uint texture_id, float radius, float height, uint segments);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer3d_set_object_position(GoudContextId ctx, uint object_id, float x, float y, float z);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer3d_set_object_rotation(GoudContextId ctx, uint object_id, float x, float y, float z);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer3d_set_object_scale(GoudContextId ctx, uint object_id, float x, float y, float z);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer3d_destroy_object(GoudContextId ctx, uint object_id);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint goud_renderer3d_add_light(GoudContextId ctx, int light_type, float pos_x, float pos_y, float pos_z, float dir_x, float dir_y, float dir_z, float r, float g, float b, float intensity, float range, float spot_angle);
